# arch-bootstrap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
base_package-instal/: base_package-instal.cpp  base_package-instal.hpp
check_internet_connected/: check_internet_connected.cpp  check_internet_connected.hpp
create_script/: create_script.cpp  create_script.hpp  create_script_BIOS.cpp  create_script_UEFI.cpp
disk_partitioning/: disk_partitioning.cpp  disk_partitioning.hpp  disk_partitioning_BIOS.cpp  disk_partitioning_UEFI.cpp
